# dranged

./: .gitattributes  CMakeLists.txt  LICENSE  README  algorithms.h  border.h  concepts.h  drange.h  drange_test.cpp  element.h  experimental.h  generator.h  pipe.h  pipe_operator.h  pipe_push_back.h  pipe_range.h  pipe_source.h  pipe_transform.h  pipeline.h  range.h  send.h  test_drange.cpp  test_dranged.cpp
include/dranged/core/: element.h  generator.h
include/dranged/helpers/: concepts.h  detect.h  fwd.h  send.h
include/dranged/pipes/: pipe.h  pipe_operator.h  pipe_push_back.h  pipe_reverse.h  pipe_source.h  pipe_take.h  pipe_transform.h  pipeline.h
include/dranged/ranges/: algorithms.h  border.h  element.h
tests/: CMakeLists.txt  test.h  test_core.cpp  test_deranged.cpp  test_helpers.h  test_main.cpp
